# gr-ini

./: .gitignore  CMakeLists.txt  Config.cmake.in  config.c  config.cpp  config.h  config.hpp  config.ini  main.c  main.cpp
include/gr-ini/: config.h
src/: config.c
test/: CMakeLists.txt  main.c  main.cpp
